manifests/ingress/grafana/namespace-grafana.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    "helm.sh/hook": pre-install
    "helm.sh/hook-weight": "-50"
  name: grafana
  labels:
    release: prometheus
