manifests/ingress/grafana/grafana-ingress.yaml
---
# Middleware
# Strip prefix /overview
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-graf
#  namespace: ingress
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /grafana
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: ingress-mw-admin@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: mongo-grafana
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-grafana
  namespace: grafana
spec:
  selector:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: dashboard
      port: 80
      targetPort: 3000
